RESOLVED FIXED23072
REGRESSION (r37371): In the Dictionary application, scroll bar appears inside its web view when resizing its window
https://bugs.webkit.org/show_bug.cgi?id=23072
Summary REGRESSION (r37371): In the Dictionary application, scroll bar appears inside...
Darin Adler
Reported 2009-01-02 00:47:34 PST
<rdar://problem/6368028> Cameron figured out this is due to the Dictionary application erroneously setting the scrolling attribute on frames. I will do a workaround so we can work with the old Dictionary application and ask the Dictionary application folks to fix the new version.
Attachments
patch (11.76 KB, patch)
2009-01-02 01:06 PST, Darin Adler
no flags
second try (1.97 KB, patch)
2009-01-02 11:40 PST, Darin Adler
zwarich: review-
third try -- this one I was able to test (21.41 KB, patch)
2009-01-02 16:43 PST, Darin Adler
sam: review+
Darin Adler
Comment 1 2009-01-02 01:06:08 PST
Oliver Hunt
Comment 2 2009-01-02 01:21:44 PST
Comment on attachment 26363 [details] patch r=me
Darin Adler
Comment 3 2009-01-02 01:27:33 PST
Darin Adler
Comment 4 2009-01-02 11:35:55 PST
Cameron says the fix did not work.
Darin Adler
Comment 5 2009-01-02 11:36:14 PST
Comment on attachment 26363 [details] patch Clearing patch since this was landed.
Darin Adler
Comment 6 2009-01-02 11:40:34 PST
Created attachment 26373 [details] second try
Cameron Zwarich (cpst)
Comment 7 2009-01-02 14:43:48 PST
Comment on attachment 26373 [details] second try This patch still has the b/f problem, although I am not sure why. I'll r- it until we figure it out.
Darin Adler
Comment 8 2009-01-02 16:43:21 PST
Created attachment 26385 [details] third try -- this one I was able to test
Darin Adler
Comment 9 2009-01-02 18:06:22 PST
Note You need to log in before you can comment on or make changes to this bug.