WebCore:

2009-01-02  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23072: REGRESSION (r37371): In the Dictionary application, scroll bar appears inside its web view when resizing its window
        https://bugs.webkit.org/show_bug.cgi?id=23072
        rdar://problem/6368028

        * WebCore.base.exp: Updated.
        * WebCore.xcodeproj/project.pbxproj: Mark HTMLHeadElement.h Private so it can be used in WebKit.

        * dom/Document.cpp:
        (WebCore::Document::Document): Initialize m_frameElementsShouldIgnoreScrolling to false.
        * dom/Document.h: Added setFrameElementsShouldIgnoreScrolling, frameElementsShouldIgnoreScrolling,
        and m_frameElementsShouldIgnoreScrolling.

        * html/HTMLFrameElementBase.cpp:
        (WebCore::HTMLFrameElementBase::parseMappedAttribute): Don't allow changes to the scrolling attribute
        to affect the scrolling mode if frameElementsShouldIgnoreScrolling() returns true. This is only
        triggered on Mac OS X when running the Dictionary application.

WebKit:

2009-01-02  Darin Adler  <darin@apple.com>

        * StringsNotToBeLocalized.txt: Updated.

WebKit/mac:

2009-01-02  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23072: REGRESSION (r37371): In the Dictionary application, scroll bar appears inside its web view when resizing its window
        https://bugs.webkit.org/show_bug.cgi?id=23072
        rdar://problem/6368028

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (isAppleDictionaryApplication): Added.
        (applyAppleDictionaryApplicationQuirk): Added. Under the right conditions, sets
        a flag to ask HTMLFrameElementBase to ignore the scrolling attribute.
        (WebFrameLoaderClient::dispatchWillSendRequest): Call the two functions above to
        apply the quirk when the relevant script is loaded.



Canonical link: https://commits.webkit.org/31746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39547 268f45cc-cd09-0410-ab3c-d52691b4dbfc