WebKit/mac/WebCoreSupport/WebFrameLoaderClient.mm
@@ -84,6 +84,7 @@
 #import <WebCore/FrameLoaderTypes.h>
 #import <WebCore/FrameTree.h>
 #import <WebCore/FrameView.h>
+#import <WebCore/HTMLHeadElement.h>
 #import <WebCore/HTMLFormElement.h>
 #import <WebCore/HTMLFrameElement.h>
 #import <WebCore/HTMLFrameOwnerElement.h>
@@ -145,6 +146,44 @@ NSString *WebPluginContainerKey = @"WebPluginContainer";
 static inline WebDataSource *dataSource(DocumentLoader* loader)
 {
     return loader ? static_cast<WebDocumentLoaderMac*>(loader)->dataSource() : nil;
+}
+
+// Quirk for the Apple Dictionary application.
+//
+// If a top level frame has a <script> element in its <head> for a script named MainPageJavaScript.js,
+// then for that frame's document, ignore changes to the scrolling attribute of frames. That script
+// has a bug in it where it sets the scrolling attribute on frames, and that erroneous scrolling
+// attribute needs to be ignored to avoid showing extra scroll bars in the window.
+// This quirk can be removed when Apple Dictionary is fixed (see <rdar://problem/6471058>).
+
+static bool isAppleDictionaryApplication()
+{
+    return [[[NSBundle mainBundle] bundleIdentifier] isEqualToString:@"com.apple.Dictionary"];
+}
+
+static void applyAppleDictionaryApplicationQuirk(WebFrame *webFrame, const ResourceRequest& request)
+{
+    if (!request.url().isLocalFile())
+        return;
+    if (!request.url().string().endsWith("MainPageJavaScript.js"))
+        return;
+    Frame* frame = core(webFrame);
+    if (!frame)
+        return;
+    if (frame->tree()->parent())
+        return;
+    Document* document = frame->document();
+    if (!document)
+        return;
+    HTMLHeadElement* head = document->head();
+    if (!head)
+        return;
+    for (Node* c = head->firstChild(); c; c = c->nextSibling()) {
+        if (c->hasTagName(scriptTag) && static_cast<Element*>(c)->getAttribute(srcAttr) == "MainPageJavaScript.js") {
+            document->setFrameElementsShouldIgnoreScrolling(true);
+            return;
+        }
+    }
 }
 
 WebFrameLoaderClient::WebFrameLoaderClient(WebFrame *webFrame)
@@ -310,6 +349,10 @@ void WebFrameLoaderClient::assignIdentifierToInitialRequest(unsigned long identi
 
 void WebFrameLoaderClient::dispatchWillSendRequest(DocumentLoader* loader, unsigned long identifier, ResourceRequest& request, const ResourceResponse& redirectResponse)
 {
+    static bool isDictionary = isAppleDictionaryApplication();
+    if (isDictionary)
+        applyAppleDictionaryApplicationQuirk(m_webFrame.get(), request);
+
     WebView *webView = getWebView(m_webFrame.get());
     WebResourceDelegateImplementationCache* implementations = WebViewGetResourceLoadDelegateImplementations(webView);
 
